[package]
name = "ggg"
version = "0.0.1"
authors = ["Fran Casas <nflamel@gmail.com>"]
edition = "2018"
description = "Use Github from the CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command Line Argument Parser
clap = "2.33"

# HTTP Client
reqwest = "0.9.19"

# Env variables
envy = "0.4"

# De/Serialization
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Logging
log = "0.4.0"
env_logger = "0.6.2"
